--- a/arxiv-chainlit-app/.env.example
+++ b/arxiv-chainlit-app/.env.example
@@ -2,5 +2,5 @@
 # Get your API key from: https://console.mistral.ai/
 MISTRAL_API_KEY=your_mistral_api_key_here
 
-# Optional: Custom agent ID (replace with your actual agent ID)
-MISTRAL_AGENT_ID=your_agent_id_here
+# Optional: Set logging level
+# LOG_LEVEL=INFO
